--- a/client/src/main/resources/style.css
+++ b/client/src/main/resources/style.css
@@ -24,3 +24,20 @@
 #scrollPane .viewport{
     -fx-background-color: #000E0F;
 }
+
+.text-area {
+    -fx-background-color: rgba(53,89,119,0);
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+
+
+.text-area .scroll-pane .content{
+    -fx-background-color: transparent;
+}
