--- a/client/src/main/resources/cardCreator.fxml
+++ b/client/src/main/resources/cardCreator.fxml
@@ -115,8 +115,8 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="617.0" minHeight="10.0" prefHeight="602.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="617.0" minHeight="10.0" prefHeight="564.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="616.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -169,21 +169,20 @@
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints maxHeight="190.0" minHeight="0.0" prefHeight="79.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="190.0" minHeight="0.0" prefHeight="79.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="466.0" minHeight="10.0" prefHeight="435.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="190.0" minHeight="0.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="466.0" minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <GridPane fx:id="wideCardGridWrapper" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <GridPane fx:id="wideCardGridWrapper" prefHeight="463.0" prefWidth="651.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
                             <RowConstraints maxHeight="390.0" minHeight="10.0" prefHeight="384.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <GridPane fx:id="wideCardGridContent" GridPane.rowIndex="1">
+                              <GridPane fx:id="wideCardGridContent">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="326.0" minWidth="10.0" prefWidth="325.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="326.0" />
@@ -265,7 +264,7 @@
                               </GridPane>
                            </children>
                         </GridPane>
-                        <TextArea prefHeight="150.0" prefWidth="200.0" promptText="Alpha Name" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextArea prefHeight="17.0" prefWidth="451.0" promptText="Alpha Name" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="100.0" right="100.0" />
                            </GridPane.margin>
