--- a/client/src/main/resources/style.css
+++ b/client/src/main/resources/style.css
@@ -41,3 +41,10 @@
 .text-area .scroll-pane .content{
     -fx-background-color: transparent;
 }
+.scroll-pane{
+    -fx-background-color: transparent;
+}
+
+.scroll-pane > .viewport{
+    -fx-background-color: transparent;
+}
