--- a/client/src/main/resources/progressPoker.fxml
+++ b/client/src/main/resources/progressPoker.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1000.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1000.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane prefHeight="680.0" prefWidth="1000.0">
         <columnConstraints>
@@ -97,13 +102,13 @@
             </GridPane>
             <GridPane fx:id="progressPokerContent" GridPane.columnIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="644.0" minHeight="10.0" prefHeight="390.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="644.0" minHeight="10.0" prefHeight="390.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="644.0" minHeight="10.0" prefHeight="206.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -112,13 +117,8 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Text>
-                  <ChoiceBox fx:id="progressPokerDiscussionCardSelector" prefWidth="150.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fx:id="projectPokerDiscussionCard" fitHeight="382.0" fitWidth="496.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </ImageView>
-                  <GridPane fx:id="progressPokerHand" GridPane.rowIndex="4">
+                  <ChoiceBox fx:id="pokerCardSelector" prefWidth="150.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <GridPane fx:id="pokerHand" GridPane.rowIndex="4">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -130,25 +130,18 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                     <children>
-                        <ImageView fx:id="progressPokerHandStateOne" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="progressPokerHandStateTwo" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-                        <ImageView fx:id="progressPokerHandStateThree" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-                        <ImageView fx:id="progressPokerHandStateFour" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-                        <ImageView fx:id="progressPokerHandStateFive" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-                        <ImageView fx:id="progressPokerHandStateSix" fitHeight="206.0" fitWidth="138.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
-                     </children>
                   </GridPane>
-                  <Button fx:id="progressPokerEndButton" mnemonicParsing="false" text="End Discussion" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <Button fx:id="pokerEndButton" mnemonicParsing="false" onAction="#pokerEndButton" text="End Discussion" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets right="300.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="progressPokerStartButton" mnemonicParsing="false" text="Start Discussion" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <Button fx:id="pokerStartButton" mnemonicParsing="false" onAction="#pokerStartButton" text="Start Discussion" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin>
                   </Button>
+                  <StackPane fx:id="pokerAlpha" prefHeight="150.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
